Обновить черновики и тестовые разметки классов
